Test/5-16_cluster.clu
Cluster size 5
Cluster number 160105       # E:      Factor:7  P:  , Ori size:5    Sub:5    From:16          
   5    16    fam_5_1           1-103      1   leng: 102
   5    16    fam_5_2           1-103      1   leng: 102
   5    16    fam_5_3           1-103      1   leng: 102
   5    16    fam_5_4           1-103      1   leng: 102
   5    16    fam_5_5           1-103      1   leng: 102
